RESOLVED FIXED149543
Find hole drawn at subframe's 0x0 when a subframe find match is not rendered
https://bugs.webkit.org/show_bug.cgi?id=149543
Summary Find hole drawn at subframe's 0x0 when a subframe find match is not rendered
Tim Horton
Reported 2015-09-24 15:06:11 PDT
Find hole drawn at subframe's 0x0 when a subframe find match is not rendered
Attachments
Patch (1.58 KB, patch)
2015-09-24 15:06 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2015-09-24 15:06:41 PDT
Tim Horton
Comment 2 2015-09-24 16:04:51 PDT
Darin Adler
Comment 3 2015-09-25 09:15:24 PDT
Comment on attachment 261898 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261898&action=review > Source/WebKit2/WebProcess/WebPage/FindController.cpp:419 > for (Vector<IntRect>::iterator it = frameRects.begin(), end = frameRects.end(); it != end; ++it) { > it->intersect(visibleRect); > - it->move(frameOffset.x(), frameOffset.y()); > + > + if (it->isEmpty()) > + continue; > + > + it->moveBy(frameOffset); > rects.append(*it); > } Should use a modern for loop.
Note You need to log in before you can comment on or make changes to this bug.