Find hole drawn at subframe's 0x0 when a subframe find match is not rendered https://bugs.webkit.org/show_bug.cgi?id=149543

Reviewed by Beth Dakin.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::rectsForTextMatches):
Don't add empty rects to the list. Later code will just inflate them
and end up drawing a nonsensical find hole.


Canonical link: https://commits.webkit.org/167647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190228 268f45cc-cd09-0410-ab3c-d52691b4dbfc